--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"homepage": "https://barnbarne.github.io/ReactStylingExercise/",
+	"homepage": "http://barnbarne.github.io/ReactStylingExercise",
 	"name": "react-complete-guide",
 	"version": "0.1.0",
 	"private": true,
@@ -38,5 +38,8 @@
 			"last 1 firefox version",
 			"last 1 safari version"
 		]
+	},
+	"devDependencies": {
+		"gh-pages": "^6.0.0"
 	}
 }
